# dimalloc

./: README.md  meson.build
.github/workflows/: meson-linux.yml  meson-windows.yml
include/: dimalloc.h
src/: dimalloc_global.c  dimalloc_init_unix.c  dimalloc_init_win32.c  dimalloc_mman.c
test/: main.c
